<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SearchApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search Hint!</string>
    <string name="search_label">Search Label!</string>
    <string name="action_search_btn">Action Search!</string>
    <string name="action_search_view">Action Search View!</string>
    <string name="title">Title</string>
    <string name="director">Director</string>
    <string name="action_clar">Clear</string>
    <string name="action_populate">Populate</string>

</resources>
