<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.searchapp.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_search_btn"
        android:orderInCategory="101"
        android:title="@string/action_search_btn"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_search_view"
        android:orderInCategory="102"
        android:title="@string/action_search_view"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />    

    <item
        android:id="@+id/action_populate"
        android:orderInCategory="103"
        android:title="@string/action_populate"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="103"
        android:title="@string/action_clar"
        app:showAsAction="never"/>
    
</menu>
